<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scrollX="-100dp"
        android:src="@drawable/background" />

    <ImageView
        android:layout_width="216dp"
        android:layout_height="220dp"
        android:layout_marginTop="119dp"
        android:scaleType="centerCrop"
        android:src="@drawable/lotos"
        android:id="@+id/image1"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helloTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/source_serif_pro"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_serif_pro"
        android:text="@string/text1"
        android:textSize="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/helloTxt" />

    <Button
        android:layout_width="271dp"
        android:layout_height="56sp"
        android:layout_marginTop="594dp"
        android:backgroundTint="@color/button1Col"
        android:text="@string/enterButton"
        android:textSize="16dp"
        android:textStyle="bold"
        android:fontFamily="@font/source_serif_pro"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <GridLayout
        android:layout_width="295dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="670dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:textColor="@color/white"
            android:id="@+id/text2"
            android:textSize="16sp"
            android:fontFamily="@font/source_serif_pro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:textColor="@color/white"
            android:id="@+id/text3"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/source_serif_pro"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toEndOf="@id/text2"
            app:layout_constraintTop_toTopOf="parent"/>
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>